--- a/OMS/CIMProfileCreator/CIMProfileCreator.csproj
+++ b/OMS/CIMProfileCreator/CIMProfileCreator.csproj
@@ -49,7 +49,9 @@
     <Compile Include="CIMProfileCreatorForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="CIMProfileCreatorForm.Designer.cs" />
+    <Compile Include="CIMProfileCreatorForm.designer.cs">
+      <DependentUpon>CIMProfileCreatorForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Core\ProfileCreator.cs" />
     <Compile Include="Core\ProfileLoader.cs" />
     <Compile Include="Manager\StringManipulationManager.cs" />
@@ -71,7 +73,9 @@
     <Compile Include="Parser\XMLParser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="CIMProfileCreatorForm.resx" />
+    <EmbeddedResource Include="CIMProfileCreatorForm.resx">
+      <DependentUpon>CIMProfileCreatorForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
